--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     margin: 0;
     font-size: 80px;
 }
-.container{
+.container0{
     display: flex;
     justify-content: center;
     align-items: center;
