--- a/style.css
+++ b/style.css
@@ -151,4 +151,16 @@ body{
 .container-guide{
     background: black;
 }
-
+@media (min-width:320px)  { 
+    .everything{
+        width: 100%;
+    }/* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { 
+    .everything{
+        width: 100%;
+    }
+    /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { 
+    .everything{
+        width: 100%;
+    }/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
